chore: update to ruby 3.2.4; retire compass framework

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -5,7 +5,7 @@
  *-----------------------------------------
 
 // Mixins
-@import compass
+@import library/compass
 @import library/dimension
 @import library/force-scrollbars
 @import library/ixt-reset
