--- a/app/assets/stylesheets/combos/_ui-resources-tiles.sass
+++ b/app/assets/stylesheets/combos/_ui-resources-tiles.sass
@@ -60,7 +60,7 @@
 
   .ui-tile
     .ui-tile__foot
-      +transition
+      transition: all 0.5s
       opacity: 0
       z-index: 1000
     &:hover
