--- a/app/assets/stylesheets/combos/_upload.sass
+++ b/app/assets/stylesheets/combos/_upload.sass
@@ -10,7 +10,7 @@
   position: relative
 
 .upload-call
-  +single-text-shadow(false, 1px, 0, false, $lighten-more)
+  text-shadow: 0px 1px 0 $lighten-more
   +position-top-right(40%, 0)
   +position-bottom-left(40%, 0)
   color: $mono-mid
