--- a/app/assets/stylesheets/components/_ui-alerts.sass
+++ b/app/assets/stylesheets/components/_ui-alerts.sass
@@ -28,7 +28,7 @@
 .ui-alert.warning,
 .ui-alert.error,
 .ui-alert.confirmation
-  +single-text-shadow(false, 1px, false, false, $darken)
+  text-shadow: 0px 1px 1px $darken
   color: $white
 
 .ui-alert.success
