--- a/app/assets/stylesheets/components/_ui-drop-menus.sass
+++ b/app/assets/stylesheets/components/_ui-drop-menus.sass
@@ -80,7 +80,7 @@
 
 .ui-drop-item a,
 .ui-drop-item button
-  +single-text-shadow(none)
+  text-shadow: none
   padding: $space-x $space-s
   color: $mono-dark
   display: block
