--- a/app/assets/stylesheets/components/_ui-tabs.sass
+++ b/app/assets/stylesheets/components/_ui-tabs.sass
@@ -50,7 +50,7 @@
 
 .ui-tabs.primary .ui-tabs-item.active a
   +box-shadow(0 -2px 2px $darken-less)
-  +single-text-shadow(false, 1px, 0, false, $lighten-more)
+  text-shadow: 0px 1px 0 $lighten-more
   background: $body-background
   border: none
   color: $mono-dark
