--- a/app/assets/stylesheets/components/_ui-tiles.sass
+++ b/app/assets/stylesheets/components/_ui-tiles.sass
@@ -159,7 +159,7 @@
 
 .ui-tile
   .ui-tile__head ul
-    +transition
+    transition: all 0.5s
     opacity: 0
     &.ui-tile__status
       opacity: 1
@@ -168,7 +168,7 @@
       opacity: 1
       &.ui-tile__status
         opacity: 0
-  
+
   .ui-tile__head
     .ui-tile__status
       .ui-tile__action-link
