--- a/app/assets/stylesheets/components/_ui-stepline.sass
+++ b/app/assets/stylesheets/components/_ui-stepline.sass
@@ -24,7 +24,7 @@
   width: 25%
 
 .ui-stepline-item-title
-  +single-text-shadow(false, 1px, 0, false, $lighten-more)
+  text-shadow: 0px 1px 0 $lighten-more
   color: $mono-mid
   padding: 0 $space-m
 
