feat: settle people-user-relationship

--- a/app/assets/stylesheets/components/_ui-autocomplete.sass
+++ b/app/assets/stylesheets/components/_ui-autocomplete.sass
@@ -126,8 +126,8 @@
 // rendering of a person suggestion line
 .ui-autocomplete__person-suggestion
   display: flex
-  flex-wrap: wrap
-  min-width: 400px
+  // flex-wrap: wrap
+  min-width: 450px
   max-width: 600px
 
   &__col1
